k8s/apps/epimac/fleet-front/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: fleet
spec:
  type: ClusterIP
  selector:
    component: fleet
  ports:
    - name: http
      port: 3000
      targetPort: http
  sessionAffinity: None
